--- a/starter/03-CSS-Fundamentals/style.css
+++ b/starter/03-CSS-Fundamentals/style.css
@@ -1,3 +1,129 @@
+/*!Universal selector */
+/*
+*{}
+*/
+
+body {
+  color: #444;
+  font-family: sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  border-top: 10px solid #1098ad;
+}
+
+h1,
+h2,
+h3 {
+  color: #1098ad;
+}
+
 h1 {
-  color: blueviolet;
+  font-size: 26px;
+  text-transform: uppercase;
+  font-style: italic;
+  color: #c63ef0;
+}
+
+h2 {
+  font-size: 40px;
+}
+
+h3 {
+  font-size: 30px;
+}
+
+h4 {
+  font-size: 20px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+p {
+  font-size: 22px;
+  line-height: 1.5;
+}
+
+li {
+  font-size: 20px;
+}
+
+/* footer p {
+  font-size: 16px;
+} */
+
+/*article header p {
+  font-style: italic;
+}
+*/
+
+#author {
+  font-style: italic;
+  font-size: 18px;
+}
+
+#copyright {
+  font-size: 16px;
+}
+
+.related_author {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.no_bullet {
+  list-style: none;
+}
+
+.main_header {
+  background-color: #f7f7f7;
+}
+
+aside {
+  background-color: #f7f7f7;
+  border-top: 5px solid #1098ad;
+  border-bottom: 5px solid #1098ad;
+}
+
+/*!PseudoClass: all of this classes help to apply styles telling what we need to do, in the last element the nth <-- is used to specify an element we can use add and even for pairs and impairs numbers*/
+li:first-child {
+  font-weight: bold;
+}
+
+li:last-child {
+  font-style: italic;
+}
+
+li:nth-child(3) {
+  /*color: red; */
+}
+
+/* Misconception: this wont work */
+article p:first-child {
+  color: red;
+}
+
+/*! Styling links ORDER LVHA*/
+
+a:link {
+  color: #1098ad;
+  text-decoration: none;
+}
+
+a:visited {
+  color: #777;
+}
+
+a:hover {
+  color: orangered;
+  font-weight: bold;
+  text-decoration: underline wavy orangered;
+}
+
+a:active {
+  background-color: black;
+  font-style: italic;
 }
