--- a/starter/02-HTML-Fundamentals/styles.css
+++ b/starter/02-HTML-Fundamentals/styles.css
@@ -1,55 +1,83 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: sans-serif;
-  border: solid 10px red;
-  border-radius: 15px;
+  line-height: 1.4;
 }
 
-h1 {
+/* PRODUCT */
+.product {
+  border: 4px solid black;
+  width: 825px;
+  margin: 50px auto;
+}
+
+.product-title {
   text-align: center;
-}
-
-h2 {
-  color: darkgray;
-}
-
-.title_background {
+  font-size: 22px;
+  text-transform: uppercase;
   background-color: #f7f7f7;
+  padding: 15px;
 }
 
-.price_bold {
+/* PRODUCT INFORMATION */
+.price {
+  font-size: 24px;
+}
+
+.shipping {
+  font-size: 12px;
+  text-transform: uppercase;
   font-weight: bold;
-  font-size: 30px;
+  color: #777;
+  margin-bottom: 20px;
 }
 
-a:link {
-  color: #1098ad;
-  text-decoration: underline;
+.more-info:link,
+.more-info:visited {
+  color: black;
 }
 
-a:visited {
-  color: orangered;
-}
-
-a:hover {
+.more-info:hover,
+.more-info:active {
   text-decoration: none;
 }
 
-a:active {
-  background-color: black;
-  font-style: italic;
+/* PRODUCT DETAILS */
+.details-title {
+  text-transform: uppercase;
+  font-size: 16px;
+  margin-bottom: 15px;
+  margin-top: 30px;
 }
 
-.bullet_style {
+.details-list {
   list-style: square;
+  margin-bottom: 30px;
+  margin-left: 20px;
 }
 
-button {
-  color: white;
-  background-color: black;
-  width: 200px;
-  height: 400%;
+.details-list li {
+  margin-bottom: 10px;
 }
-button:hover {
-  color: black;
-  background-color: white;
+
+/* BUTTON */
+.add-cart {
+  background-color: #000;
+  border: none;
+  color: #fff;
+  font-size: 20px;
+  text-transform: uppercase;
+  cursor: pointer;
+  padding: 15px;
+  width: 100%;
+  border-top: 4px solid black;
+}
+
+.add-cart:hover {
+  color: #000;
+  background-color: #fff;
 }
