--- a/starter/03-CSS-Fundamentals/style.css
+++ b/starter/03-CSS-Fundamentals/style.css
@@ -14,6 +14,13 @@ body {
   border-top: 10px solid #1098ad;
 }
 
+.container {
+  width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+  margin: 0 auto;
+}
+
 .main_header {
   background-color: #f7f7f7;
   /* padding: 20px;
@@ -21,6 +28,7 @@ body {
   padding-right: 40px; */
   padding: 20px 40px;
   margin-bottom: 60px;
+  height: 80px;
 }
 
 nav {
@@ -42,6 +50,7 @@ aside {
   /* padding-top: 50px;
   padding-bottom: 50px; */
   padding: 50px 0px;
+  width: 500px;
 }
 
 h1,
@@ -167,6 +176,11 @@ a:hover {
 a:active {
   background-color: black;
   font-style: italic;
+}
+
+.post-image {
+  width: 100%;
+  height: auto;
 }
 
 /* DEMO */
