--- a/starter/03-CSS-Fundamentals/style.css
+++ b/starter/03-CSS-Fundamentals/style.css
@@ -8,10 +8,12 @@
   padding: 0;
 }
 
+/* Page sections */
 body {
   color: #444;
   font-family: sans-serif;
   border-top: 10px solid #1098ad;
+  position: relative;
 }
 
 .container {
@@ -19,6 +21,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   margin: 0 auto;
+  position: relative;
 }
 
 .main_header {
@@ -60,6 +63,7 @@ h4 {
   color: #1098ad;
 }
 
+/* Smaller elements */
 h1,
 h2,
 h3 {
@@ -181,6 +185,29 @@ a:active {
 .post-image {
   width: 100%;
   height: auto;
+}
+
+nav a:link {
+  /*background-color: orange;
+  margin: 20px;
+  padding: 20px;
+  display: block;*/
+  margin-right: 30px;
+  margin-top: 10px;
+  display: inline-block;
+}
+
+nav a:link:last-child {
+  margin-right: 0;
+}
+
+button {
+  font-size: 22px;
+  padding: 20px;
+  cursor: pointer;
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
 }
 
 /* DEMO */
