--- a/starter/02-HTML-Fundamentals/styles.css
+++ b/starter/02-HTML-Fundamentals/styles.css
@@ -13,6 +13,7 @@ body {
   border: 4px solid black;
   width: 825px;
   margin: 50px auto;
+  position: relative;
 }
 
 .product-title {
@@ -39,6 +40,8 @@ body {
 .more-info:link,
 .more-info:visited {
   color: black;
+  margin-bottom: 30px;
+  display: block;
 }
 
 .more-info:hover,
@@ -80,4 +83,45 @@ body {
 .add-cart:hover {
   color: #000;
   background-color: #fff;
+}
+
+.sale {
+  color: white;
+  background-color: red;
+  letter-spacing: 3px;
+  display: inline-block;
+  padding: 5px 10px;
+  position: absolute;
+  top: -15px;
+  left: -30px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.color {
+  background-color: black;
+  width: 22px;
+  height: 22px;
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.color-blue {
+  background-color: blue;
+}
+
+.color-red {
+  background-color: red;
+}
+
+.color-yellow {
+  background-color: yellow;
+}
+
+.color-green {
+  background-color: green;
+}
+
+.color-brown {
+  background-color: brown;
 }
