--- a/starter/02-HTML-Fundamentals/styles.css
+++ b/starter/02-HTML-Fundamentals/styles.css
@@ -1,11 +1,27 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
   font-family: sans-serif;
   line-height: 1.4;
+}
+
+.clearfix::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.container {
+  /*   background-color: red; */
+}
+
+.product-img {
+  float: left;
+  margin-right: 40px;
 }
 
 /* PRODUCT */
@@ -25,8 +41,17 @@ body {
 }
 
 /* PRODUCT INFORMATION */
+.product-info {
+  /*  (825 - 8 - 250 - 80) / 2  */
+  width: 243px;
+  float: left;
+  margin-right: 40px;
+  margin-top: 20px;
+}
+
 .price {
   font-size: 24px;
+  float: left;
 }
 
 .shipping {
@@ -35,13 +60,37 @@ body {
   font-weight: bold;
   color: #777;
   margin-bottom: 20px;
+  float: right;
+  margin-top: 8px;
+}
+
+.sale {
+  background-color: #ec2f2f;
+  color: #fff;
+  font-size: 12px;
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 2px;
+  padding: 7px 15px;
+  display: inline-block;
+  position: absolute;
+  top: -17px;
+  left: -38px;
+
+  /*   width: 40px;
+  text-align: center; */
+}
+
+.product-description {
+  clear: both;
+  margin-bottom: 10px;
 }
 
 .more-info:link,
 .more-info:visited {
   color: black;
   margin-bottom: 30px;
-  display: block;
+  display: inline-block;
 }
 
 .more-info:hover,
@@ -49,17 +98,45 @@ body {
   text-decoration: none;
 }
 
+.color {
+  background-color: #000;
+  height: 22px;
+  width: 22px;
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.color-blue {
+  background-color: #2f6ee2;
+}
+.color-red {
+  background-color: #ec2f2f;
+}
+.color-yellow {
+  background-color: #f0bf1e;
+}
+.color-green {
+  background-color: #90cc20;
+}
+.color-brown {
+  background-color: #885214;
+}
+
 /* PRODUCT DETAILS */
+.product-details {
+  width: 243px;
+  float: left;
+  margin-top: 20px;
+}
+
 .details-title {
   text-transform: uppercase;
   font-size: 16px;
   margin-bottom: 15px;
-  margin-top: 30px;
 }
 
 .details-list {
   list-style: square;
-  margin-bottom: 30px;
   margin-left: 20px;
 }
 
@@ -83,45 +160,4 @@ body {
 .add-cart:hover {
   color: #000;
   background-color: #fff;
-}
-
-.sale {
-  color: white;
-  background-color: red;
-  letter-spacing: 3px;
-  display: inline-block;
-  padding: 5px 10px;
-  position: absolute;
-  top: -15px;
-  left: -30px;
-  text-align: center;
-  text-transform: uppercase;
-}
-
-.color {
-  background-color: black;
-  width: 22px;
-  height: 22px;
-  display: inline-block;
-  margin-right: 10px;
-}
-
-.color-blue {
-  background-color: blue;
-}
-
-.color-red {
-  background-color: red;
-}
-
-.color-yellow {
-  background-color: yellow;
-}
-
-.color-green {
-  background-color: green;
-}
-
-.color-brown {
-  background-color: brown;
 }
