--- a/starter/04-CSS-Layouts/style.css
+++ b/starter/04-CSS-Layouts/style.css
@@ -197,7 +197,6 @@ nav a:link {
   display: block; */
 
   margin-right: 30px;
-  margin-top: 10px;
   display: inline-block;
 }
 
@@ -266,7 +265,7 @@ nav p {
   font-size: 18px;
 } */
 
-/*! FLOATS */
+/*! FLOATS 
 .author-img {
   float: left;
   margin-bottom: 20px;
@@ -309,5 +308,50 @@ aside {
 footer {
   clear: both;
 }
+*/
 
-/*Studying section 4 vid 56*/
+/*Flex!*/
+.main-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.author-box {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.author {
+  margin-bottom: 0;
+  margin-left: 15px;
+}
+
+.related-post {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 30px;
+}
+
+.related-link:link {
+  font-size: 17px;
+  font-weight: bold;
+  font-style: normal;
+  margin-bottom: 5px;
+  display: block;
+}
+
+.related-author {
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: normal;
+  font-style: italic;
+}
+
+/*Better comments CSS*/
+/*!/
+/*?/
+/**/
+/*TODO:*/
